Update link target for admin cancel button
On new projects, go back to the work page. On existing projects, go to
their detail pages.

--- a/cabin/templates/admin/project.html
+++ b/cabin/templates/admin/project.html
@@ -85,7 +85,11 @@
 
     <div class="buttons">
       <button type="submit">Save it bitches!</button>
-      <a class="button" href="{{ url_for('main.work') }}">Cancel</a>
+      {% if is_new %}
+        <a class="button" href="{{ url_for('main.work') }}">Cancel</a>
+      {% else %}
+        <a class="button" href="{{ url_for('main.project', slug=form.slug.data) }}">Cancel</a>
+      {% endif %}
       <a class="icon trash">Delete</a>
     </div>
   </form>
