Clean up icon CSS

--- a/cabin/style/icons.styl
+++ b/cabin/style/icons.styl
@@ -29,18 +29,24 @@ input[type="checkbox"].icon.public
   &:checked
     @extend .icon.public
 
-.social
-  > a
-    icon(26px)
-  .behance   { background-image: url(icons/social/behance.png) }
-  .facebook  { background-image: url(icons/social/facebook.png) }
-  .flickr    { background-image: url(icons/social/flickr.png) }
-  .github    { background-image: url(icons/social/github.png) }
-  .instagram { background-image: url(icons/social/instagram.png) }
-  .linkedin  { background-image: url(icons/social/linkedin.png) }
-  .pinterest { background-image: url(icons/social/pinterest.png) }
-  .tumblr    { background-image: url(icons/social/tumblr.png) }
-  .twitter   { background-image: url(icons/social/twitter.png) }
+
+social-icon(network, retina = false)
+  fnSuffix = retina ? '@2x' : ''
+  .social .{network}, .icon.{network}
+    background-image: url('icons/social/' + network + fnSuffix + '.png')
+
+.social > a
+  icon(26px)
+
+// social-icon(behance)
+social-icon(facebook)
+social-icon(flickr)
+social-icon(github)
+// social-icon(instagram)
+// social-icon(linkedin)
+// social-icon(pinterest)
+social-icon(tumblr)
+social-icon(twitter)
 
 
 @media all and (-webkit-min-device-pixel-ratio: 1.5)
@@ -61,13 +67,12 @@ input[type="checkbox"].icon.public
     &:checked
       @extend .icon.public
 
-  .social
-    .behance   { background-image: url(icons/social/behance@2x.png) }
-    .facebook  { background-image: url(icons/social/facebook@2x.png) }
-    .flickr    { background-image: url(icons/social/flickr@2x.png) }
-    .github    { background-image: url(icons/social/github@2x.png) }
-    .instagram { background-image: url(icons/social/instagram@2x.png) }
-    .linkedin  { background-image: url(icons/social/linkedin@2x.png) }
-    .pinterest { background-image: url(icons/social/pinterest@2x.png) }
-    .tumblr    { background-image: url(icons/social/tumblr@2x.png) }
-    .twitter   { background-image: url(icons/social/twitter@2x.png) }
+  // social-icon(behance, true)
+  social-icon(facebook, true)
+  social-icon(flickr, true)
+  social-icon(github, true)
+  // social-icon(instagram, true)
+  // social-icon(linkedin, true)
+  // social-icon(pinterest, true)
+  social-icon(tumblr, true)
+  social-icon(twitter, true)
