--- a/cabin/templates/project.html
+++ b/cabin/templates/project.html
@@ -65,7 +65,9 @@
 
   <div class="images">
   {% for image in project.images %}
-    {{ image_url(image) }}
+    <img src="{{ blank_img }}" alt
+      {%- if image.shadow %} data-class="shadow"{% endif %}
+      data-src="{{ image_url(image.file) }}" data-height="{{ image.height }}">
   {% endfor %}
   </div>
 
