Reduce img.shadow radius on smaller screens

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -726,3 +726,5 @@ body.splash-transition
 @media only screen and (max-width: 699px)
   .page-project .tab-chooser
     display: none
+  .page-project .images img.shadow
+    border-radius: 2px 2px 0 0
