--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -26,9 +26,9 @@
     <nav>
       <a href="{{ url_for('main.index') }}" class="logo">Cabin</a>
       <div class="links">
-        <a href="{{ url_for('main.work') }}"><hr>Work</a>
-        <a href="{{ url_for('main.about') }}"><hr>About</a>
-        <a href="{{ url_for('main.lab') }}"><hr>Lab</a>
+        <a href="{{ url_for('main.work') }}">Work</a>
+        <a href="{{ url_for('main.about') }}">About</a>
+        <a href="{{ url_for('main.lab') }}">Lab</a>
         <div class="social">
           <a href="https://twitter.com/madebycabin" target="_blank" class="twitter">Twitter</a>
           <a href="https://www.facebook.com/madebycabin" target="_blank" class="facebook">Facebook</a>
