Enable sorting project images

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -727,7 +727,7 @@ body.splash-transition
         clear: both
         margin-right: -20px  // make room for the last column
         padding-top: 40px
-      .image
+      .image, .sortable-placeholder
         float: left
         margin: 0 20px 20px 0
         position: relative
@@ -749,6 +749,8 @@ body.splash-transition
             display: block
         &:nth-of-type(4n + 1)
           clear: left
+      .sortable-placeholder
+        background: cabin_grey_light
 
     .buttons
       margin: 80px 0 40px
