Rudimentary Persona login system
Needs to be hooked up to Flask-Login.

--- a/cabin/style/icons.styl
+++ b/cabin/style/icons.styl
@@ -18,6 +18,7 @@ icon(size)
   &.edit { background-image: url(icons/edit.png) }
   &.feature { background-image: url(icons/feature.png) }
   &.image-upload { @extend .icon-30; background-image: url(icons/image-upload.png) }
+  &.logout { background-image: url(icons/logout.png) }
   &.move { background-image: url(icons/move.png) }
   // &.plus is in the main stylesheet
   &.private { background-image: url(icons/private.png) }
