--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -448,6 +448,12 @@ body.splash-transition
       float: right
       margin: 0
       text-transform: uppercase
+    .logout
+      float: right
+      margin: 21px 20px 0 0
+      opacity: .2
+      &:hover
+        opacity: 1
 
 
   // Work list page  ///////////////////////////////
