--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -539,9 +539,11 @@ body.splash-transition
     .tab-contents
       width: 520px
     .prev-next a
-      width: 38px
-      padding-left: 0
-      padding-right: 0
+      background-color: cabin_grey_light
+      border-radius: 2px
+      size: 38px button_height - 2px
+      &:hover
+        background-color: cabin_bronze
 
 
   // Admin  ////////////////////////////////////////
