--- a/cabin/templates/project.html
+++ b/cabin/templates/project.html
@@ -59,8 +59,8 @@
     </div>
 
     <div class="prev-next">
-      <a class="button" href="{{ url_for('main.project', slug=project.prev_slug) }}">Previous</a>
-      <a class="button" href="{{ url_for('main.project', slug=project.next_slug) }}">Next</a>
+      <a class="arrow-left" href="{{ url_for('main.project', slug=project.prev_slug) }}">Previous</a>
+      <a class="arrow-right" href="{{ url_for('main.project', slug=project.next_slug) }}">Next</a>
     </div>
   </div>
 
@@ -73,8 +73,8 @@
   </div>
 
   <div class="prev-next">
-    <a class="button" href="{{ url_for('main.project', slug=project.prev_slug) }}">Previous</a>
-    <a class="button" href="{{ url_for('main.project', slug=project.next_slug) }}">Next</a>
+    <a class="arrow-left" href="{{ url_for('main.project', slug=project.prev_slug) }}">Previous</a>
+    <a class="arrow-right" href="{{ url_for('main.project', slug=project.next_slug) }}">Next</a>
   </div>
 
   {# TODO: social, maybe
