Add email icon to social

--- a/cabin/style/icons.styl
+++ b/cabin/style/icons.styl
@@ -58,6 +58,7 @@ input[type="checkbox"].icon.public
     @extend .icon.public
 
 // social-icon(behance)
+social-icon(email)
 social-icon(facebook)
 social-icon(flickr)
 social-icon(github)
@@ -97,6 +98,7 @@ social-icon(twitter)
       @extend .icon.public
 
   // social-icon(behance, true)
+  social-icon(email, true)
   social-icon(facebook, true)
   social-icon(flickr, true)
   social-icon(github, true)
