--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -410,6 +410,8 @@ body.splash-transition
           transition-delay: 300ms
         a:nth-child(5)
           transition-delay: 400ms
+        a:nth-child(6)
+          transition-delay: 500ms
       .toggle span
         transform: rotate(45deg)
 
