--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -34,6 +34,7 @@
           <a href="http://madebycabin.tumblr.com/" target="_blank" class="tumblr">Tumblr</a>
           <a href="http://www.flickr.com/photos/madebycabin" target="_blank" class="flickr">Flickr</a>
           <a href="https://github.com/cabin" target="_blank" class="github">GitHub</a>
+          <a href="mailto:xo@madebycabin.com" class="email">xo@madebycabin.com</a>
         </div>
       </div>
       <a class="toggle"><span>+</span></a>
