--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -45,6 +45,9 @@ body-text()
   font-size: 14px
   line-height: 1.3
 
+.thin-text
+  font-weight: normal
+
 h1
   @extend .headline-text
   margin: 30px 0
